# pyhoot

./: .gitignore  .gitmodules  CHANGES.txt  CMakeLists.txt  DEVELOPER.md  LICENSE  Makefile  Pipfile  README.md  README.txt  VERSION  Vagrantfile  conanfile.txt  conaninfo.txt  conf.py  doxygen.conf  libcode.version  pyproject.toml  setup.cfg  setup.py
docs/: 001-introduction.md  600-developer-docs.md  710_api_documentation.md  README.md
matching/: PythonMatch.cpp  PythonMatchCreator.cpp  PythonMatchCreator.h
scripts/: cpp_to_pybind11.py
sphinx/: conf.py  hoot.rst  index.rst
src/hoot/: __init__.py  __main__.py  hoot_pythonic.py  utils.py
src/hoot/bindings/: LibExports.h  PyBindModule.cpp  PyBindModule.h  QtBindings.h
src/hoot/conflate/: ConflateExecutor.cpp
src/hoot/core/matching/: PythonMatch.cpp  PythonMatch.h  PythonMatchCreator.cpp  PythonMatchCreator.h  PythonMatchVisitor.cpp  PythonMatchVisitor.h
src/hoot/elements/: Element.cpp  OsmMap.cpp  Tags.cpp
src/hoot/info/: Version.cpp
src/hoot/py/: PyHootStable.h  TestUtils.cpp
src/hoot/py/algorithms/extractors/: CircularErrorExtractor.cpp  CircularErrorExtractor.h  FeatureExtractor.cpp  StatusEqualsExtractor.cpp  StatusEqualsExtractor.h  TagMatchExtractor.cpp  TagMatchExtractor.h
src/hoot/py/algorithms/string/: StringDistance.cpp
src/hoot/py/bindings/: HootInterfaces.h  PyBindModule.cpp  PyBindModule.h  QtBindings.h
src/hoot/py/cmd/: Command.cpp
src/hoot/py/conflate/: ConflateExecutor.cpp  PythonConflateExecutor.cpp  PythonConflateExecutor.h  UnifyingConflator.cpp
src/hoot/py/conflate/matching/: MatchClassification.cpp  MatchThreshold.cpp  PythonCreatorDescription.cpp  PythonCreatorDescription.h  PythonMatch.cpp  PythonMatch.h  PythonMatchCreator.cpp  PythonMatchCreator.h  PythonMatchVisitor.cpp  PythonMatchVisitor.h
src/hoot/py/conflate/merging/: PythonMerger.cpp  PythonMerger.h  PythonMergerCreator.cpp  PythonMergerCreator.h
src/hoot/py/conflate/review/: ReviewMarker.cpp
src/hoot/py/criterion/: ElementCriterion.cpp
src/hoot/py/elements/: Element.cpp  ElementId.cpp  ElementType.cpp  MapProjector.cpp  OsmMap.cpp  Status.cpp  Tags.cpp
src/hoot/py/info/: CreatorDescription.cpp  Version.cpp
src/hoot/py/io/: IoUtils.cpp  OsmMapReader.cpp  OsmMapWriter.cpp
src/hoot/py/ops/: ConstOsmMapOperation.cpp  OsmMapOperation.cpp
src/hoot/py/schema/: OsmSchema.cpp  SchemaVertex.cpp  TagMergerFactory.cpp
src/hoot/py/scoring/: DataSamples.cpp  MapComparator.cpp  MatchFeatureExtractor.cpp
src/hoot/py/test/: ConflateCaseTestSuite.cpp  PyHootTestListener.h
src/hoot/py/util/: Factory.cpp  Log.cpp  Settings.cpp
src/hoot/py/visitors/: ElementOsmMapVisitorPy.cpp
src/hoot/schema/: OsmSchema.cpp
src/hoot/util/: Factory.cpp
src/tgs/RandomForest/: DataFrame.cpp  RandomForest.cpp
test-files/generic-poi/poi-generic-1/: Config.conf  Output.osm
tests/hoot/core/matching/: test_python_match_creator.py
tests/hoot/py/conflate/: test_conflate_case.py  test_generic_poi.py
tests/hoot/py/generic/: test_generic_poi.py
tests/hoot/py/matching/: test_python_match_creator.py
tests/hoot/py/test/: test_conflate_case.py
tests/hoot/py/visitors/: test_element_osm_map_visitor.py
