[metadata]
name = hootenanny
version = 0.0.1
author = Jason R. Surratt
author_email = jason@epochgeo.com
description = Unofficial python bindings for Hootenanny
license = "GPLv3+"
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/epochgeo/pyhoot
project_urls =
    Bug Tracker = https://github.com/epochgeo/pyhoot/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src/python
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

